<resources>
    <string name="app_name">Rhythmic Resale</string>
    <string name="logo">Logo</string>
    <string name="option">Option</string>
    <string name="home">Home</string>
    <string name="user_stefano">Ste_Meraviglia50</string>
    <string name="user_alice">Ali_Chiavi81</string>
    <string name="bio_stefano">La musica è la mia vita, suono l\'armonica, la pianola e un po\' la batteria</string>
    <string name="bio_alice">Se non ho te!</string>
    <string name="your_ads">I tuoi annunci:</string>
    <string name="ad_pd12">Jammin Pro PD 12</string>
    <string name="price_pd12">80€</string>
    <string name="num17">17</string>
    <string name="ad_chitarrina">Chitarrina 4 corde</string>
    <string name="price_chitarrina">160€</string>
    <string name="num42">42</string>
    <string name="ad_darbuka">Darbuka originale turca</string>
    <string name="price_darbuka">30€</string>
    <string name="ad_basso">Basso elettrico Squier</string>
    <string name="price_basso">380€</string>
    <string name="ad_bacchette">Bacchette 5B Vic Firth</string>
    <string name="price_bacchette">10€</string>
    <string name="ad_tele">TELECASTER American Pro…</string>
    <string name="price_tele">1400€</string>
    <string name="ad_classica">Chitarra di mia figlia di scuola</string>
    <string name="price_classica">100€</string>
    <string name="ad_bassotuba">Bassotuba perfette con …</string>
    <string name="price_bassotuba">600€</string>
    <string name="ad_sax">Sax soprano placcato blu </string>
    <string name="price_sax">135€</string>
    <string name="ad_tamburo">Brasilian Pandeiro con…</string>
    <string name="price_tamburo">50€</string>
    <string name="ad_tastiera">Tastiera MIDI UMX49</string>
    <string name="price_tastiera">46€</string>
    <string name="ad_basso_alice">YAMAHA - basso 4 corde</string>
    <string name="price_basso_alice">200€</string>
    <string name="ad_asta">Asta Microfono Proel</string>
    <string name="price_asta">20€</string>
    <string name="ad_microfono">Microfono Samson</string>
    <string name="price_microfono">140€</string>
    <string name="num36">36</string>
    <string name="num9">9</string>
    <string name="num108">108</string>
    <string name="num272">272</string>
    <string name="num49">49</string>
    <string name="nu86">86</string>
    <string name="num27">27</string>
    <string name="num66">66</string>
    <string name="num58">58</string>
    <string name="num71">71</string>
    <string name="add_ad">Aggiungi un annuncio</string>
    <string name="sell">Vendi</string>
    <string name="ad_title">Nome dell\'annuncio:</string>
    <string name="write">Scrivi…</string>
    <string name="select_category">Seleziona la categoria:</string>
    <string name="description">Descrizione:</string>
    <string name="brand">Marca:</string>
    <string name="price">Prezzo:</string>
    <string name="done">Fatto</string>
    <string name="select_conditions">Condizioni:</string>
    <string name="login">Accedi</string>
    <string name="register">Registrati</string>
    <string name="mail_username">E-mail o Username</string>
    <string name="or">oppure</string>
    <string name="password">Password</string>
    <string name="password2">Inserisci nuovamente la password</string>
    <string name="mail_register">Mail</string>
    <string name="username_register">Nome utente</string>
    <string name="profile">Area personale</string>
    <string name="user1">Michele_FiglioDiJack</string>
    <string name="user2">Domenico_Sabatini</string>
    <string name="user3">Catia_SidroDiPere</string>
    <string name="user4">Ali_Chiavi81</string>
    <string name="message_user1">Messaggio Automatico: l\'utente è in vacanza e non può rispondere.</string>
    <string name="message_user2">Mi dispiace ma non posso scendere ulteriormente di prezzo.</string>
    <string name="message_user3">Grazie a te per l\'acquisto!</string>
    <string name="message_user4">Grazie per l\'acquisto :)</string>
    <string name="messages">Messaggi</string>
    <string name="insertions">Annunci</string>
    <string name="register_message">"Registrazione completata con successo!"</string>
    <string name="logout">"Logout"</string>
    <string name="conversation_id_text">Conversazione ID: %1$s</string>
    <string name="conversation_id_placeholder">Conversazione ID: %1$s</string>
    <string name="input_message">Scrivi un messaggio</string>
    <string name="send">Invia</string>
    <string name="change_password">Cambia Password</string>
    <string name="notifications">Notifiche</string>
    <string name="PD">Dati Personali</string>
    <string name="privacy">Privacy</string>
    <string name="bass_description">Basso Fender Squier serie Precision BASS, prodotto nel 2018 replica dell\'iconico basso del \'70. Design classico e sound avvolgente tipico di questi bassi. Usato solo per verificare che funzioni, dotato ancora di tutte le pellicole protettive. Vendo per inutilizzo. No perditempo, effettuo spedizioni solo in Italia.</string>
    <string name="buy">Acquista</string>
    <string name="distance_less_than_1"> &lt;1 km</string>
    <string name="distance_greater_than_300"> &gt;300 km</string>
    <string name="distance_km"> %1$d km</string>
    <string name="ricerca_avanzata">Ricerca avanzata</string>
    <string name="distanza_massima">Distanza massima</string>
    <string name="dove">Dove</string>
    <string name="categoria">Categoria</string>
    <string name="tipo_di_annuncio">Tipo di Annuncio</string>
    <string name="applica">Applica</string>
    <string name="apply">Applica</string>
    <string name="ad_type">Condizioni</string>
    <string name="lt_1_km"><![CDATA[<1 km]]></string>
    <string name="distance">Distanza</string>
    <string name="category">Categoria</string>
    <string name="advanced_search">Ricerca Avanzata</string>
    <string name="text_ste1">Ciao, sono interessato all\'annuncio del basso, è ancora disponibile?</string>
    <string name="text_alice1">Salve sì, ho già ricevuto alcune proposte ma per ora è disponibile</string>



    <string-array name="categories">
        <item>A corda</item>
        <item>Elettronici</item>
        <item>Fiati</item>
        <item>Percussioni</item>
        <item>Tastiere</item>
        <item>Accessori</item>
        <item>Altro</item>
    </string-array>

    <string-array name="conditions">
        <item>Nuovo</item>
        <item>Pari al nuovo</item>
        <item>Ottime</item>
        <item>Qualche segno di usura</item>
        <item>Rovinato ma funzionante</item>
        <item>Non funzionante</item>
    </string-array>


</resources>