<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/less_rounded_corners_light_background"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/advanced_search"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:paddingBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:textSize="16sp"
        android:paddingBottom="8dp"/>

    <SeekBar
        android:id="@+id/seekbar_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="300"
        android:progress="0"
        android:thumb="@drawable/custom_seekbar_thumb" />

    <TextView
        android:id="@+id/text_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="&lt;1 km"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:paddingBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="16sp"
        android:paddingTop="2dp"
        android:paddingBottom="8dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/less_rounded_corners"
        android:layout_marginBottom="10dp">

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:spinnerMode="dropdown"
            style="@style/CustomSpinnerStyle" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ad_type"
        android:textSize="16sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/less_rounded_corners"
        android:layout_marginBottom="8dp">

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:spinnerMode="dropdown"
            style="@style/CustomSpinnerStyle" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="16sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/less_rounded_corners"
        android:layout_marginBottom="10dp">

        <Spinner
            android:id="@+id/spinner_price"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:spinnerMode="dropdown"
            style="@style/CustomSpinnerStyle" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/less_rounded_corners_orange"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="8dp"
        >


        <Button
            android:id="@+id/button_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:textSize="18sp"
            android:textStyle="bold"
            android:backgroundTint="@color/orange"
            android:textColor="@color/cream"
            />


    </RelativeLayout>






</LinearLayout>