<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/lightgrey">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/orange"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_marginStart="18dp" />

    <ImageButton
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:gravity="center_horizontal"
        android:backgroundTint="@color/lightgrey"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        android:src="@drawable/cromalogo"
        android:layout_centerInParent="true" />

    <ImageButton
        android:id="@+id/profile"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/user_icon"
        android:scaleType="fitCenter"
        android:backgroundTint="@color/lightgrey"
        android:contentDescription="@string/profile"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="18dp" />

    <ImageButton
        android:id="@+id/option"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/option"
        android:scaleType="fitCenter"
        android:backgroundTint="@color/lightgrey"
        android:contentDescription="@string/option"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="18dp"
        android:visibility="gone" />
</RelativeLayout>
