<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/cream">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="20dp">




            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/propic_alice"
                android:layout_marginBottom="20dp"
                app:shapeAppearanceOverlay="@style/circle_image"
                />

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:id="@+id/user_info"
                >



                <TextView
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/user_alice"
                    android:textSize="22sp"
                    android:textAlignment="center"
                    android:paddingTop="12dp"
                    android:textColor="@color/orange"
                    android:textStyle="bold"

                    />

                <TextView
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/bio_alice"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:paddingTop="4dp"
                    android:paddingRight="12dp"
                    android:paddingLeft="12dp"
                    android:paddingBottom="14dp"
                    android:textColor="@color/black"

                    />

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:layout_margin="26dp"
                android:paddingBottom="6dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/your_ads"
                    android:text="@string/your_ads"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingTop="6dp"
                    android:paddingStart="30dp"
                    />



                <RelativeLayout
                    android:id="@+id/ad1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@+id/your_ads"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:layout_alignParentStart="true"
                    android:padding="10dp"
                    android:background="@drawable/rounded_stroke"
                    >


                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/basso1"
                        app:shapeAppearanceOverlay="@style/rounded_image"
                        android:id="@+id/ad1_image"
                        />

                    <TextView
                        android:id="@+id/ad1_name"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ad_basso"
                        android:textColor="@color/darkdarkgrey"
                        android:textSize="16sp"
                        android:padding="4dp"
                        android:layout_below="@+id/ad1_image"
                        android:fontFamily="sans-serif-medium"
                        />


                    <ImageView
                        android:id="@+id/eye1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/eye_icon"
                        android:layout_gravity="start"
                        android:layout_below="@+id/ad1_name"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/num108"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_marginEnd="12dp"
                        android:layout_below="@+id/ad1_name"
                        android:layout_toEndOf="@id/eye1"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_basso"
                        android:textColor="@color/orange"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginEnd="6dp"
                        android:layout_below="@+id/ad1_name"
                        android:layout_alignEnd="@id/ad1_name"
                        />




                </RelativeLayout>



                <RelativeLayout
                    android:id="@+id/ad2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@+id/your_ads"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:layout_alignParentEnd="true"
                    android:padding="10dp"
                    android:background="@drawable/rounded_stroke"
                    >


                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/asta_microfono"
                        app:shapeAppearanceOverlay="@style/rounded_image"
                        android:id="@+id/ad2_image"
                        />

                    <TextView
                        android:id="@+id/ad2_name"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ad_asta"
                        android:textColor="@color/darkdarkgrey"
                        android:textSize="16sp"
                        android:padding="4dp"
                        android:layout_below="@+id/ad2_image"
                        android:fontFamily="sans-serif-medium"
                        />


                    <ImageView
                        android:id="@+id/eye2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/eye_icon"
                        android:layout_gravity="start"
                        android:layout_below="@+id/ad2_name"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/num42"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_marginEnd="12dp"
                        android:layout_below="@+id/ad2_name"
                        android:layout_toEndOf="@id/eye2"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_asta"
                        android:textColor="@color/orange"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginEnd="6dp"
                        android:layout_below="@+id/ad2_name"
                        android:layout_alignEnd="@id/ad2_name"
                        />




                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/ad3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@+id/your_ads"
                    android:layout_marginTop="250dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="20dp"
                    android:padding="10dp"
                    android:layout_alignTop="@id/ad1"
                    android:background="@drawable/rounded_stroke"
                    >


                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/microfono"
                        app:shapeAppearanceOverlay="@style/rounded_image"
                        android:id="@+id/ad3_image"
                        />

                    <TextView
                        android:id="@+id/ad3_name"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ad_microfono"
                        android:textColor="@color/darkdarkgrey"
                        android:textSize="16sp"
                        android:padding="4dp"
                        android:layout_below="@+id/ad3_image"
                        android:fontFamily="sans-serif-medium"
                        />


                    <ImageView
                        android:id="@+id/eye3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/eye_icon"
                        android:layout_gravity="start"
                        android:layout_below="@+id/ad3_name"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/num9"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_marginEnd="12dp"
                        android:layout_below="@+id/ad3_name"
                        android:layout_toEndOf="@id/eye3"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_microfono"
                        android:textColor="@color/orange"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginEnd="6dp"
                        android:layout_below="@+id/ad3_name"
                        android:layout_alignEnd="@id/ad3_name"
                        />


                </RelativeLayout>




            </RelativeLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="80dp"/>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>