<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/cream">

    <FrameLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_container"
        android:layout_above="@+id/footer" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rounded_top_corners">

        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/home_icon"
            android:scaleType="fitCenter"
            android:backgroundTint="@color/lightgrey"
            android:contentDescription="@string/home"
            android:layout_weight="1" />

        <View
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical" />

        <ImageButton
            android:id="@+id/message_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/message_icon"
            android:scaleType="fitCenter"
            android:backgroundTint="@color/lightgrey"
            android:contentDescription="@string/messages"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:padding="11dp" />

        <View
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:background="@color/darkgrey"
            android:layout_gravity="center_vertical" />

        <ImageButton
            android:id="@+id/sell_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/plus_icon"
            android:scaleType="fitCenter"
            android:backgroundTint="@color/lightgrey"
            android:contentDescription="@string/sell"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:padding="4dp" />

        <View
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:background="@color/darkgrey"
            android:layout_gravity="center_vertical" />

        <ImageButton
            android:id="@+id/cart_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/cart_icon"
            android:scaleType="fitCenter"
            android:backgroundTint="@color/lightgrey"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
</RelativeLayout>
